# kiwi-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-egg  MANIFEST.in  README.md  __main__.py  _version.py  alembic.ini  app.py  build.sh  commit.sh  compose-egg.yaml  config.py  init.sh  migrate.py  requirements.txt  setup.cfg  setup.py
.ci/: Dockerfile  build-with-docker.sh
.github/workflows/: main.yml
base/: .gitignore  README.md  cache.py  interface.py  style.py  utils.py  valid.py
base/helper/: ipa_inspect.py
base/plugins/: filter_keywords.py
base/plugins/china_city_picker/: data.py  main.py
base/plugins/ip_detail/: main.py
base/plugins/random_list/: main.py
base/plugins/random_name/: main.py  name.txt
base/plugins/random_user/: main.py
frameworks/: action_sample.py  actions.py  base.py  context.py  db_sample.py  main_server.py  models.py  models_ex.py  node_sample.py  redis_mongo.py  route.py  server_context.py  session.py  sql_model.py  sql_model_plugin.py  task.py
kiwi/: __main__.py  app.py  main.py
migrations/: env.py
modules/core/: form.py  injector.py  main.py  task.py  utils.py
modules/core/actions/: dev.py  form.py  main.py
modules/core/mgr/: task.py
modules/core/static/: demo_form.js  demo_form.json
modules/core/static/js/: dataTables.columnControl.min.js
modules/core/static/k-form-design/: index.html
scripts/: dev.sh  init.sh  init_module.sh
static/: README.md
