[metadata]
name = kiwi-server
version = attr: _version.__version__
url =
author = dave luo
author_email = kitsudo163@163.com
description =
long_description = file: README.md
license = BSD
classifiers =
    Development Status :: 0.1 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Kiwi-Server
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation =
    Source = https://e.coding.net/kitsudo-01/kiwi-server/kiwi_server.git
[options]
python_requires = >=3.8
packages = find:
zip_safe = false
include_package_data = true
[options.entry_points]
console_scripts =
    kiwi-admin = django.core.management:execute_from_command_line
